Fixing SHB visibility in app landscape mode r=kgrandon

--- a/apps/system/style/software_button_manager/software_button_manager.css
+++ b/apps/system/style/software_button_manager/software_button_manager.css
@@ -60,7 +60,7 @@
     right: 0;
   }
 
-  #software-buttons.visible {
+  #screen:not(.locked) #software-buttons.visible {
     transform: translateX(-100%);
   }
 }
